--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "Learn-Vue3",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "lib/vue-next.cjs.js",
+  "module": "lib/vue-next.esm.js",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "build": "rollup -c"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +17,13 @@
     "@babel/core": "^7.22.11",
     "@babel/preset-env": "^7.22.14",
     "@babel/preset-typescript": "^7.22.11",
+    "@rollup/plugin-typescript": "^11.1.3",
     "@types/jest": "^29.5.4",
     "babel-jest": "^29.6.4",
     "jest": "^29.6.1",
+    "rollup": "^3.29.2",
     "ts-jest": "^29.1.1",
+    "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   }
 }
