--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Learn-Vue3",
+  "name": "@lorain/learn-vue3",
   "version": "1.0.0",
   "description": "",
   "type": "module",
@@ -9,7 +9,14 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "build": "rollup -c",
-    "build:watch": "rollup -c -w"
+    "build:watch": "rollup -c -w",
+    "eslint": "eslint src/** --no-error-on-unmatched-pattern --ext .js, .ts --cache",
+    "eslint:fix": "npm run eslint -- --fix",
+    "prettier": "prettier --check .",
+    "prettier:fix": "prettier --write .",
+    "lint": "pnpm run eslint && pnpm run prettier",
+    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -20,8 +27,17 @@
     "@babel/preset-typescript": "^7.22.11",
     "@rollup/plugin-typescript": "^11.1.3",
     "@types/jest": "^29.5.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "babel-jest": "^29.6.4",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest": "^27.4.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^8.0.0",
     "jest": "^29.6.1",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3",
     "rollup": "^3.29.2",
     "ts-jest": "^29.1.1",
     "tslib": "^2.6.2",
