--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "build": "rollup -c",
-    "build:watch": "rollup -c -w",
+    "build": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "build:watch": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript -w",
     "eslint": "eslint src/** --no-error-on-unmatched-pattern --ext .js, .ts --cache",
     "eslint:fix": "npm run eslint -- --fix",
     "prettier": "prettier --check .",
@@ -27,6 +27,7 @@
     "@babel/preset-typescript": "^7.22.11",
     "@rollup/plugin-typescript": "^11.1.3",
     "@types/jest": "^29.5.4",
+    "@types/node": "^20.6.3",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "babel-jest": "^29.6.4",
