feat: 🎸 实现代码生成逻辑, 去除多余的lint配置

--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,7 @@ root = true
 
 [*]
 charset = utf-8
+# 设置space使用index_size, 设置为tab使用tab_width
 indent_style = space
 indent_size = 2
 end_of_line = lf
