--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     }
   },
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watchAll",
+    "test": "vitest run",
+    "test:watch": "vitest --watchAll",
     "build": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "build:watch": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript -w",
     "eslint": "eslint src/** --no-error-on-unmatched-pattern --ext .js, .ts --cache",
@@ -36,21 +36,18 @@
     "@babel/preset-typescript": "^7.22.11",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-typescript": "^11.1.3",
-    "@types/jest": "^29.5.4",
     "@types/node": "^20.6.3",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jest": "^27.4.0",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.0",
-    "jest": "^29.6.1",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
     "rollup": "^3.29.2",
-    "ts-jest": "^29.1.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^1.0.4"
   }
 }
