--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -3,6 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "exports": {
+    ".": {
+      "import": {
+        "node": "./dist/v-next.esm.js",
+        "default": "./dist/v-next.esm.js"
+      },
+      "require": "./dist/v-next.cjs.js"
+    },
+    "./dist/*": "./dist/*",
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
